--- a/Domaci02-inline-block/index.html
+++ b/Domaci02-inline-block/index.html
@@ -8,19 +8,19 @@
     <body>
         <div class="container">
             <div class="box">
-                <div id="circle1" class="circle"></div>
+                <div class="circle"></div>
                 <p>Proident adipisicing magna ex nulla ex deserunt aliqua aute officia magna pariatur adipisicing nulla ut.</p>
             </div>
             <div class="box">
-                <div id="circle2" class="circle"></div>
+                <div class="circle"></div>
                 <p>Proident adipisicing magna ex nulla ex deserunt aliqua aute officia magna pariatur adipisicing nulla ut.</p>
             </div>
             <div class="box">
-                <div id="circle3" class="circle"></div>
+                <div class="circle"></div>
                 <p>Proident adipisicing magna ex nulla ex deserunt aliqua aute officia magna pariatur adipisicing nulla ut.</p>
             </div>
             <div class="box">
-                <div id="circle4" class="circle"></div>
+                <div class="circle"></div>
                 <p>Proident adipisicing magna ex nulla ex deserunt aliqua aute officia magna pariatur adipisicing nulla ut.</p>
             </div>
         </div>  
