--- a/Domaci03-Forma/index.html
+++ b/Domaci03-Forma/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html UTF-8>
     <head>
         <title>Domaci Forma</title>
         <link rel="stylesheet" href="css/reset.css">
@@ -32,7 +32,7 @@
                                 <label for="email">Email:</label>
                                 <input type="email">
                                 <label for="birthday">Birthday:</label>
-                                <input type="number">
+                                <input type="text">
                                
                                 <div class="group">
                                     <label for="sex">I am:</label>
@@ -61,7 +61,7 @@
                                     </div>
                                     <div class="group">
                                         <label><i class="fa fa-phone" aria-hidden="true"></i></label>
-                                        <input type="number" for="phone" name="phone"> Phone number.
+                                        <input type="text" for="phone" name="phone"> Phone number.
                                     </div>  
                                     <div class="group">
                                         <label><i class="fa fa-map-marker" aria-hidden="true"></i></label>
