--- a/Domaci03-Tabela/index.html
+++ b/Domaci03-Tabela/index.html
@@ -9,10 +9,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<!-- Raleway -->
 	<link href='https://fonts.googleapis.com/css?family=Raleway:700' rel='stylesheet' type='text/css'>
-	<!-- Pacifico -->
+	<!-- Pacifico and Josefin Sans-->
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Pacifico" rel="stylesheet">
 	<!-- Ikonica -->
-	<link rel="icon" type="image/png" href="slike/favicon.png">
+	<link rel="icon" type="image/png" href="slike/logo.png">
 </head>
 <body>
 	<main>
